// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrsCalculationControlComponent should display contribution values and total when in preview mode 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  employeeRewardsData={[Function Object]}
  inEditMode="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 preview-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="preview-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="false"
                ng-reflect-max-characters="30"
                ng-reflect-placeholder="Cash Compensation"
                ng-reflect-value=""
              >
                
                <span>
                  Cash Compensation
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Base Salary"
              ng-reflect-value=""
            >
              
              <span>
                Base Salary
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            150000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Bonus"
              ng-reflect-value=""
            >
              
              <span>
                Bonus
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            10000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left last-before-summary"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Short Term Incentive"
              ng-reflect-value=""
            >
              
              <span>
                Short Term Incentive
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            5000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder=""
              ng-reflect-value=""
            >
              
              <span>
                
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            165000
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should display the Add Field button if a field has been removed 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  inEditMode="false"
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 preview-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="preview-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="false"
                ng-reflect-max-characters="30"
                ng-reflect-placeholder=""
              >
                
                <span>
                  
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="test summary"
            >
              
              <span>
                test summary
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            $---,---
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should exclude fields in preview mode if employee data is null for a given field 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  employeeRewardsData={[Function Object]}
  inEditMode="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 preview-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="preview-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="false"
                ng-reflect-max-characters="30"
                ng-reflect-placeholder="Cash Compensation"
                ng-reflect-value=""
              >
                
                <span>
                  Cash Compensation
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Base Salary"
              ng-reflect-value=""
            >
              
              <span>
                Base Salary
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            150000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Bonus"
              ng-reflect-value=""
            >
              
              <span>
                Bonus
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            10000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          
          
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder=""
              ng-reflect-value=""
            >
              
              <span>
                
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            160000
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should include fields in preview mode if employee data is 0 for a given field 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  employeeRewardsData={[Function Object]}
  inEditMode="false"
  mode={[Function Number]}
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 preview-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="preview-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="false"
                ng-reflect-max-characters="30"
                ng-reflect-placeholder="Cash Compensation"
                ng-reflect-value=""
              >
                
                <span>
                  Cash Compensation
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Base Salary"
              ng-reflect-value=""
            >
              
              <span>
                Base Salary
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            150000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Bonus"
              ng-reflect-value=""
            >
              
              <span>
                Bonus
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            10000
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left last-before-summary"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Short Term Incentive"
              ng-reflect-value=""
            >
              
              <span>
                Short Term Incentive
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            0
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder=""
              ng-reflect-value=""
            >
              
              <span>
                
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            160000
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should render the supplied Summary 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  inEditMode="false"
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 preview-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="preview-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="false"
                ng-reflect-max-characters="30"
                ng-reflect-placeholder=""
              >
                
                <span>
                  
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="test summary"
            >
              
              <span>
                test summary
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            $---,---
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should render the supplied data fields 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  employeeRewardsData={[Function Object]}
  inEditMode={[Function Boolean]}
  mode="0"
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 edit-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="edit-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="true"
                ng-reflect-max-characters="30"
              >
                
                <span>
                  <input
                    class="input-text offScreen"
                    maxlength="30"
                    minlength="1"
                    ng-reflect-klass="input-text"
                    ng-reflect-ng-class="offScreen"
                    placeholder=""
                    type="text"
                  />
                  
                  <span
                    class="editable d-flex"
                  >
                    <span
                      class="edit-text"
                    >
                      
                    </span>
                    <span
                      class="edit-icon"
                    >
                      <fa-icon
                        aria-hidden="true"
                        class="fa-xs ml-2"
                      />
                    </span>
                  </span>
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="true"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="First"
            >
              
              <span>
                <input
                  class="input-text offScreen"
                  maxlength="30"
                  minlength="1"
                  ng-reflect-klass="input-text"
                  ng-reflect-ng-class="offScreen"
                  placeholder="First"
                  type="text"
                />
                
                <span
                  class="editable d-flex"
                >
                  <span
                    class="edit-text"
                  >
                    First
                  </span>
                  <span
                    class="edit-icon"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </span>
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            $---,---
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="true"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Second"
            >
              
              <span>
                <input
                  class="input-text offScreen"
                  maxlength="30"
                  minlength="1"
                  ng-reflect-klass="input-text"
                  ng-reflect-ng-class="offScreen"
                  placeholder="Second"
                  type="text"
                />
                
                <span
                  class="editable d-flex"
                >
                  <span
                    class="edit-text"
                  >
                    Second
                  </span>
                  <span
                    class="edit-icon"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </span>
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            $---,---
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          
          <td
            class="text-left last-before-summary"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="true"
              ng-reflect-max-characters="30"
              ng-reflect-placeholder="Third"
            >
              
              <span>
                <input
                  class="input-text offScreen"
                  maxlength="30"
                  minlength="1"
                  ng-reflect-klass="input-text"
                  ng-reflect-ng-class="offScreen"
                  placeholder="Third"
                  type="text"
                />
                
                <span
                  class="editable d-flex"
                >
                  <span
                    class="edit-text"
                  >
                    Third
                  </span>
                  <span
                    class="edit-icon"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </span>
              </span>
              
            </pf-inline-string-editor>
          </td>
          
          <td
            class="contribution-field text-right"
          >
            $---,---
          </td>
          
          <td>
            <button
              class="remove-btn btn btn-sm btn-outline-danger"
              type="button"
            >
              <fa-icon
                class="fa-sm"
              />
            </button>
          </td>
        </tr>
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="true"
              ng-reflect-max-characters="30"
            >
              
              <span>
                <input
                  class="input-text offScreen"
                  maxlength="30"
                  minlength="1"
                  ng-reflect-klass="input-text"
                  ng-reflect-ng-class="offScreen"
                  placeholder=""
                  type="text"
                />
                
                <span
                  class="editable d-flex"
                >
                  <span
                    class="edit-text"
                  >
                    
                  </span>
                  <span
                    class="edit-icon"
                  >
                    <fa-icon
                      aria-hidden="true"
                      class="fa-xs ml-2"
                    />
                  </span>
                </span>
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            $---,---
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;

exports[`TrsCalculationControlComponent should render the supplied title 1`] = `
<pf-trs-calculation-control
  compensationValuePlaceholder={[Function String]}
  controlData={[Function Object]}
  controlSum={[Function EventEmitter]}
  cp={[Function Object]}
  inEditMode="false"
  onCompFieldAdded={[Function EventEmitter]}
  onCompFieldRemoved={[Function EventEmitter]}
  onCompFieldTitleChange={[Function EventEmitter]}
  onTitleChange={[Function EventEmitter]}
  onUpdateSummaryTitleChange={[Function EventEmitter]}
  removedFields={[Function Array]}
>
  <div
    class="trs-calculation container py-2 preview-mode"
    ng-reflect-klass="trs-calculation container py-2"
    ng-reflect-ng-class="preview-mode"
  >
    <table
      class="table table-borderless table-sm mb-0 w-100"
    >
      <colgroup>
        <col
          class="field-column"
        />
        <col
          class="contribution-column"
        />
        <col
          class="button-column"
        />
      </colgroup>
      <thead>
        <tr
          class="trs-calculation-row w-100"
        >
          <th
            class="text-left font-weight-normal"
            scope="col"
          >
            <h4
              class="primary-control-heading mb-1"
            >
              <pf-inline-string-editor
                ng-reflect-in-edit-mode="false"
                ng-reflect-max-characters="30"
                ng-reflect-placeholder="test title"
              >
                
                <span>
                  test title
                </span>
                
              </pf-inline-string-editor>
            </h4>
          </th>
          <th
            class="secondary-header align-middle text-right font-weight-normal"
            scope="col"
          >
            Contribution
          </th>
          <th
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        
        <tr
          class="trs-calculation-row w-100"
        >
          <td
            class="summary text-left"
          >
            <pf-inline-string-editor
              ng-reflect-in-edit-mode="false"
              ng-reflect-max-characters="30"
            >
              
              <span>
                
              </span>
              
            </pf-inline-string-editor>
          </td>
          <td
            class="contribution-field summary text-right"
          >
            $---,---
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    
  </div>
</pf-trs-calculation-control>
`;
